--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,7 +4,9 @@
     --light-grey: #E1E1E0;
     --dark-grey: #9a9a9a;
     --green: #66B86A;
+    --light-green: #66b86a4a;
     --dark-green: #132123;
+    --orange: #fc9a28;
     --heading-font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     --text-font: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
     --xll: 65px;
@@ -12,10 +14,12 @@
     --l: 45px;
     --m: 32px;
     --sm: 24px;
+    --ss: 20px;
     --s: 18px;
     --xs: 16px;
     --xss: 13px;
     --border-color: rgb(236, 240, 241);
+    --border-color-darken: rgb(130, 130, 130);
 }
 
 button,
@@ -331,12 +335,13 @@ a {
     width: 100%;
     gap: 20px;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .category_card {
     min-height: 280px;
     width: 100%;
-    width: calc((100% / 3) - 54px);
+    width: calc((100% / 3) - 14px);
     color: white;
     padding: 20px;
     gap: 7px;
@@ -358,7 +363,7 @@ a {
 .category_card:nth-child(2),
 .category_card:first-child {
     min-height: 420px;
-    width: calc(50% - 90px);
+    width: calc(50% - 10px);
     padding: 40px;
     gap: 15px;
 }
@@ -667,8 +672,8 @@ button.slick-arrow {
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    display: block;
-    padding: 5px;
+    display: flex;
+    padding: 3px;
 }
 
 .social_media img {
@@ -687,6 +692,7 @@ button.slick-arrow {
 
 .location_item img {
     width: 25px;
+    height: 25px;
 }
 
 .location_item a {
@@ -1131,16 +1137,21 @@ body.no-scroll {
 
 .breadcrumb a {
     color: var(--black);
+    display: flex;
+    align-items: center;
 }
 
 .small_description {
     gap: 5px;
     color: var(--dark-grey);
+    font-size: var(--xss);
+    margin: 10px 0 20px;
 }
 
 .full_description {
     display: grid;
     grid-template-columns: 60% 40%;
+    gap: 50px;
 }
 
 
@@ -1273,4 +1284,651 @@ body.no-scroll {
     transform: translateY(-50%);
     background: none;
     border: none;
+}
+
+/* category page */
+
+.breadcrumb_container,
+.category_page {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.breadcrumb_container {
+    align-items: center;
+}
+
+.categories_result button {
+    border: none;
+    background-color: transparent;
+    color: var(--black);
+}
+
+.filter_section {
+    padding-right: 40px;
+}
+
+.filter_section p,
+.filter_section a {
+    color: var(--dark-grey);
+    font-size: var(--xs);
+}
+
+.sub_category {
+    padding: 5px 25px;
+}
+
+.row_back {
+    padding: 0px 25px;
+    background-image: url("../images/prev.svg");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: left center;
+}
+
+.arrow_more {
+    color: var(--green) !important;
+    font-size: var(--xs);
+    padding: 0 25px;
+    background-image: url("../images/arrow_down.svg");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: left center;
+}
+
+.filter_section ul {
+    padding: 5px 15px;
+    margin: 0;
+    list-style: none;
+    border-left: 1px solid var(--border-color-darken);
+    display: grid;
+    gap: 5px;
+}
+
+.main_category {
+    margin-bottom: 5px;
+}
+
+.result_search p:first-child {
+    font-weight: bold;
+    color: var(--black);
+}
+
+.filter_content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+button.remove_all_active_filter {
+    font-size: var(--xss);
+    color: var(--dark-grey);
+    margin: 10px 0;
+    padding-left: 0;
+}
+
+.filter_content p {
+    background-color: var(--light-green);
+    width: max-content;
+    font-size: var(--xss);
+    font-weight: 300;
+    color: var(--black);
+    padding: 5px 3px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+}
+
+.filter_content .remove {
+    width: 20px;
+    height: 15px;
+    padding: 0;
+    margin-left: 5px;
+    background-image: url(../images/close_gray.svg);
+    background-size: contain;
+    background-position: center;
+}
+
+.slide_the_list,
+.filter_part_container h3 {
+    font-size: var(--ss);
+    font-weight: normal;
+    margin: 10px 0;
+}
+
+.slide_the_list {
+    width: 100%;
+    text-align: left;
+    background-size: 15px;
+    background-position: center right;
+    background-repeat: no-repeat;
+    font-family: var(--heading-font);
+    padding-left: 0;
+    font-size: var(--ss);
+    background-image: url(../images/arrow_down.svg);
+}
+
+.slide_the_list.open {
+    background-image: url(../images/arrow_up.svg);
+}
+
+.check_list {
+    display: none;
+}
+
+.slide_the_list:focus {
+    outline: none;
+}
+
+.gap-5 {
+    gap: 5px;
+}
+
+.gap-1 {
+    gap: 1px;
+}
+
+.check_list label {
+    display: inline-block;
+    position: relative;
+    padding-left: 23px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-size: var(--xss);
+    color: var(--dark-grey);
+}
+
+.check_list label input[type="checkbox"] {
+    display: none;
+}
+
+.check_list label span:before,
+.check_list label:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 13px;
+    height: 13px;
+    background-size: 23px;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 1px solid var(--dark-grey);
+    border-radius: 2px;
+}
+
+.check_list label input[type="checkbox"]:checked+span:before {
+    background-image: url(../images/close_green.svg);
+}
+
+.measure_content {
+    display: grid;
+    gap: 5px;
+    grid-template-columns: 20px 1fr max-content 1fr 30px;
+    align-items: center;
+}
+
+.measure_content p {
+    font-size: var(--xss);
+    color: var(--black);
+}
+
+.item_filter {
+    width: 80%;
+}
+
+.measure_content button {
+    background-color: var(--green);
+    width: 30px;
+    height: 30px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.measure_content button img {
+    object-fit: contain;
+    width: 100%;
+    height: auto;
+}
+
+.measure_content input {
+    border-radius: 4px;
+    border: 1px solid var(--border-color-darken);
+    padding: 5px;
+}
+
+.measure_item h4 {
+    margin: 20px 25px 5px;
+}
+
+.green_card {
+    padding: 20px;
+    border-radius: 12px;
+    position: relative;
+    margin-top: 40px;
+}
+
+.green_card h2 {
+    font-size: var(--m);
+}
+
+.green_card p {
+    color: var(--white);
+}
+
+.green_card div.contact_item a {
+    color: var(--green);
+    font-size: var(--xss);
+}
+
+.green_card .contact_item {
+    align-items: center;
+    margin-top: 20px;
+}
+
+.card_content .contact_item:first-child {
+    margin-top: 30px;
+}
+
+.green_card .contact_item img {
+    height: auto;
+    width: 30px;
+    margin-right: 5px;
+}
+
+.green_card .contact_item h4 {
+    font-size: var(--ss);
+    margin: 0;
+}
+
+.bg_image {
+    position: absolute;
+    background-image: url(../images/people-pointing-half.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: contain;
+    bottom: 0;
+    height: 80%;
+    width: 100%;
+    left: 0;
+    z-index: 0;
+}
+
+.card_content {
+    z-index: 1;
+    position: relative;
+}
+
+.items_slider_container {
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.items_slider.slick-slider {
+    margin-bottom: 0 !important;
+    padding: 0 40px;
+}
+
+.items_slider button.slick-arrow {
+    top: 0;
+}
+
+.item_slider {
+    gap: 5px;
+    border: 1px solid var(--border-color-darken);
+    padding: 4px 10px;
+    border-radius: 4px;
+    display: flex !important;
+    max-width: max-content;
+}
+
+.item_slider img {
+    width: 30px;
+    max-height: 20px;
+    object-position: left;
+}
+
+.select2-container--default .select2-selection--single {
+    padding-right: 10px;
+    position: relative;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    background: url(../images/arrow_down.svg) no-repeat center right;
+    height: 100%;
+    width: 20px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border: none;
+}
+
+.select2-container--open .select2-selection--single .select2-selection__arrow {
+    background: url(../images/arrow_up.svg) no-repeat center right;
+}
+
+.sort_by_container .select2-container--default {
+    width: max-content !important;
+}
+
+.filter_result_header {
+    display: grid;
+}
+
+.sort_by_container {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 10px;
+    font-size: var(--xs);
+}
+
+.sort_by_container p {
+    margin-right: 10px;
+}
+
+.product_review {
+    font-size: var(--xss);
+    display: flex;
+    align-items: end;
+    gap: 5px;
+    margin-bottom: 20px;
+}
+
+.product_review a {
+    display: flex;
+    align-items: end;
+    padding: 0 10px;
+}
+
+.xss {
+    font-size: var(--xss) !important;
+}
+
+.products_result_header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin: 20px 0 40px;
+}
+
+.product_container {
+    border: 1px solid var(--border-color);
+    border-radius: 12px;
+    padding: 15px 20px;
+}
+
+.product_review img {
+    width: var(--xs);
+}
+
+.font_grey,
+.product_review span:last-child {
+    color: var(--dark-grey);
+}
+
+.header_product p {
+    display: flex;
+    gap: 5px;
+}
+
+.header_product span {
+    padding: 5px 10px;
+    border-radius: 7px;
+    color: white;
+    font-size: var(--xss);
+}
+
+.discount {
+    background-color: var(--green);
+}
+
+.aanbieding {
+    background-color: var(--black);
+}
+
+.product_description {
+    display: grid;
+    gap: 5px;
+    margin: 5px 0 10px;
+}
+
+.product_description h4 {
+    font-size: var(--ss);
+}
+
+.approved::before {
+    display: block;
+    content: ".";
+    color: transparent;
+    font-size: 6px;
+    background-image: url(../images/check.svg);
+    background-color: var(--green);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-size: 13px;
+    background-position: center;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+}
+
+.approved.box_bg::before {
+    background-color: transparent;
+    background-image: url(../images/box.svg);
+}
+
+.approved {
+    display: flex;
+    gap: 5px;
+    color: var(--green);
+}
+
+.real_price {
+    font-size: var(--xs);
+    position: relative;
+    display: inline-block;
+}
+
+.real_price::before {
+    content: "";
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    width: 120%;
+    height: 2px;
+    background-color: var(--black);
+    transform: rotate(-20deg);
+    transform-origin: 0 10%;
+}
+
+.discounted_price {
+    font-weight: bold;
+    font-size: var(--m);
+}
+
+.art_number {
+    margin-top: 20px;
+}
+
+.image_container {
+    display: flex;
+    height: 150px;
+    max-height: 150px;
+    margin: 20px 0;
+}
+
+.the_pagination {
+    display: flex;
+    border-radius: 5px;
+    border: 1px solid var(--border-color-darken);
+    width: max-content;
+    margin: 0 auto;
+}
+
+.the_pagination a {
+    color: var(--black);
+    width: 40px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 1px solid var(--border-color-darken);
+    overflow: hidden;
+}
+
+.the_pagination a.current,
+.the_pagination a:hover {
+    background-color: var(--green);
+    color: white;
+}
+
+.the_pagination a:last-child {
+    border-right: unset;
+}
+
+.go_first img:last-child {
+    margin-left: -7px;
+}
+
+.go_last img:first-child {
+    margin-right: -7px;
+}
+
+.green_check_mark {
+    display: flex;
+}
+
+.green_check_mark::before {
+    display: block;
+    content: ".";
+    color: transparent;
+    background-image: url(../images/green-check.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center left;
+    width: 20px;
+    height: auto;
+    margin-right: 5px;
+}
+
+.items_detail_container div p {
+    color: var(--dark-grey);
+}
+
+.double-column {
+    display: grid;
+    grid-template-columns: 120px auto;
+}
+
+#amount {
+    font-size: 23px;
+    color: grey;
+    border: 1px solid var(--border-color);
+    outline: none;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+/* Apply this to the input field */
+input[type="number"] {
+    -moz-appearance: textfield;
+    -webkit-appearance: none;
+    appearance: none;
+    position: relative;
+}
+
+/* For Firefox */
+input[type="number"]::-moz-number-spinner {
+    opacity: 1;
+    /* Ensures that the arrows are visible */
+}
+
+/* For Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: inner-spin-button;
+    appearance: inner-spin-button;
+    opacity: 1;
+    /* Ensures that the arrows are visible */
+}
+
+/* General style for all browsers */
+input[type="number"]::after {
+    content: '';
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+
+.upper_content p {
+    margin-bottom: 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+.like img {
+    display: none;
+}
+
+.like.no img.doesnt_like,
+.like.yes img.liked {
+    display: block;
+}
+
+.add_to_cart_container {
+    display: grid;
+    grid-template-columns: 60px auto;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.add_cart_btn {
+    background-color: var(--orange);
+    color: var(--white);
+    font-size: var(--xss);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-weight: bold;
+    border-radius: 7px;
+}
+
+.add_cart_btn img {
+    height: 80%;
+}
+
+.add_wishlist {
+    background-color: transparent;
+    border: 1px solid var(--green);
+    min-height: 39px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 7px;
+    color: var(--green);
+    font-weight: bold;
+    font-size: var(--xss);
+}
+
+.add_wishlist img {
+    width: 30px;
+}
+
+.product_detail_content .items_detail_container {
+    margin-top: 20px;
+}
+
+.product_detail_content .items_detail_container hr {
+    margin: 0;
 }
