--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2206,6 +2206,10 @@ a.details_link {
   gap: 6%;
 }
 
+.input_card {
+  margin-bottom: 15px;
+}
+
 .input_card label {
   font-weight: bold;
   display: grid;
@@ -2219,8 +2223,10 @@ a.details_link {
   margin: 8px 0;
   border-radius: 4px;
   outline: none;
-  border: 1px solid var(--black);
+  border: 1px solid var(--border-color-darken);
   display: block;
+  width: 100%;
+
 }
 
 .radio_input {
@@ -2248,6 +2254,45 @@ a.details_link {
   display: flex;
   gap: 40px;
   margin: 8px 0;
+}
+
+.sub_menu {
+  display: grid;
+  grid-template-columns: repeat(4, 22%);
+  justify-content: space-between;
+}
+
+.sub_menu ul {
+  flex-direction: column;
+  align-items: start;
+  gap: 10px;
+}
+
+.sub_menu ul li a {
+  padding: 0;
+  height: unset;
+  min-height: unset;
+  font-weight: normal;
+  color: var(--dark-grey);
+}
+
+.sub_menu ul li a:hover {
+  color: var(--green);
+}
+
+.sub_menu ul li:first-child {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.input_card textarea {
+  width: 100%;
+  height: 120px;
+}
+
+.pop_appointment form button[type="submit"] {
+  margin-left: auto;
+  display: flex;
 }
 
 
