--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -269,6 +269,23 @@ a {
 /* main home page */
 .hero {
   min-height: 500px;
+  position: relative;
+}
+
+.hero::after {
+  display: block;
+  content: "c";
+  font-size: 1px;
+  background-color: rgba(0, 0, 0, 0.41);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.hero .row_container {
+  z-index: 1;
+  position: inherit;
 }
 
 .content_hero {
@@ -589,7 +606,14 @@ button.slick-arrow {
 .inspirate_item {
   background-color: white;
   border-radius: 20px;
+  height: 100%;
   overflow: hidden;
+  flex-direction: column;
+  display: flex;
+}
+
+.inpirate_detail p {
+  margin-bottom: 10px;
 }
 
 .inpirate_detail {
@@ -597,6 +621,7 @@ button.slick-arrow {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  height: 100%;
 }
 
 .inpirate_detail h4 {
@@ -605,7 +630,7 @@ button.slick-arrow {
 
 .inpirate_detail a {
   width: max-content;
-  margin-top: 10px;
+  margin-top: auto;
 }
 
 .inpisrate_image {
@@ -2143,7 +2168,7 @@ a.details_link {
   display: flex;
   opacity: 0;
   visibility: hidden;
-  z-index: 0;
+  z-index: 1;
   top: 0;
   left: 0;
   transition: all 0.3s ease-in;
@@ -2323,12 +2348,20 @@ a.details_link {
     width: 100%;
   }
 
+  .pop_appointment {
+    overflow-y: auto;
+    min-height: 100vh;
+    height: 100%;
+  }
+
   .appointment_container {
     width: 90%;
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
+    height: 100%;
+    overflow-y: auto;
   }
 
   .input_container {
