--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1250,14 +1250,60 @@ body.no-scroll {
   background-position: left center;
 }
 
+
+/* Filter page subcategory  */
+.sub_category .sub_category-wrapper {
+  gap: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.4s ease-in;
+}
+
+.sub_category.active .sub_category-wrapper {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.4s ease-in;
+}
+
+.sub_category-wrapper li {
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in;
+}
+
+.active .sub_category-wrapper li {
+  height: 20px;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease-in;
+}
+
 .arrow_more {
   color: var(--green) !important;
   font-size: var(--xs);
   padding: 0 25px;
+  position: relative;
+}
+
+.arrow_more::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 2px;
+  width: 15px;
+  height: 15px;
   background-image: url("../images/arrow_down.svg");
   background-size: 15px;
   background-repeat: no-repeat;
   background-position: left center;
+  transform: rotate(0deg);
+  transition: transform 0.3s ease;
+}
+
+.active .arrow_more::before {
+  transform: rotate(180deg);
+  transition: transform 0.3s ease;
 }
 
 .filter_section ul {
@@ -2249,7 +2295,6 @@ a.details_link {
   gap: 40px;
   margin: 8px 0;
 }
-
 
 @media screen and (max-width: 1028px) {
   .full_description {
