--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1668,6 +1668,10 @@ button.remove_all_active_filter {
   border-radius: 12px;
   width: 100%;
   padding: 15px 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product_review img {
@@ -2068,17 +2072,31 @@ a.add_cart_btn img {
   font-size: var(--xss);
 }
 
+.the_detail_description button,
 a.details_link {
   color: var(--border-color-darken);
   font-size: var(--xss);
+  font-family: var(--text-font);
   padding: 0 20px 0 0;
   width: 100%;
   text-align: right;
-  background-image: url(../images/arrow_down_gray.svg);
   background-position: center right;
   background-repeat: no-repeat;
   background-size: 10px;
-  margin-top: 20px;
+  margin: 0;
+}
+
+.the_detail_description {
+  grid-column-end: 3;
+  grid-column-start: 1;
+}
+
+
+.the_detail_description .check_list {
+  color: var(--border-color-darken);
+  font-size: var(--xss);
+  padding: 10px 0 20px;
+  font-weight: normal;
 }
 
 .slick-arrow._reposition {
